<resources>
    <string name="app_name">MyExpenses</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Expenses</string>
    <string name="nav_header_subtitle">Menu de Ajustes</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sair</string>

    <!--Categoria dos Gastos-->
    <string name="cat_alimentacao">Alimentação</string>
    <string name="cat_educacao">Educação</string>
    <string name="cat_transporte">Transporte</string>
    <string name="cat_saude">Saúde</string>
    <string name="cat_outros">Outros</string>

    <!--Soma dos Gastos-->
    <string name="cat_total">Total</string>


    <!--Resumo de Gastos-->
    <string name="des_anual">Despesa Anual</string>
    <string name="des_mensal">Despesa Mensal</string>
    <string name="des_semanal">Despesa Semanal</string>

    <!--Categoria dos Gastos Spinner-->
    <string-array name="categoria_array">
        <item>Alimentação</item>
        <item>Educação</item>
        <item>Transporte</item>
        <item>Saúde</item>
        <item>Outros</item>
    </string-array>

    <!--Sim/Nao-->
    <string name="sim">Sim</string>
    <string name="nao">Não</string>

    <!--Notificacao de exclusao-->
    <string name="notificacao_exclusao"> Ao confirmar a exclusão de sua conta todos os dados Serão apagados.\n
    Deseja realmente excluir sua conta?</string>

</resources>
